13997
According to SLS 6.19 the production for generators is,
```scala
Pattern1 '<-' Expr [Guard]
```

Pattern1 includes type patterns, so the following ought to compile,
```scala
val a : Any = "foo"
for (s : String <- Some(a)) yield s
```

and behave similarly to,
```scala
val a : Any = "foo"
Some(a) match { case Some(s : String) => Some(s) ; case _ => None }
```

However the for comprehension gives the following error at compile time,
```scala
scala> val a : Any = "foo"
a: Any = foo

scala> for(s : String <- Some(a)) yield s
<console>:6: error: type mismatch;
 found   : (String) => String
 required: (Any) => ?
       for(s : String <- Some(a)) yield s
           ^
```
